--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>chart</module>
     <module>media</module>
     <module>icon</module>
+    <module>icon-fontawesome</module>
     <module>text</module>
     <module>menu</module>
     <module>window</module>
@@ -77,6 +78,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-ui-fx-icon</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>mmm-ui-fx-icon-fontawesome</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
