--- a/temporal/pom.xml
+++ b/temporal/pom.xml
@@ -7,15 +7,15 @@
     <artifactId>mmm-ui-fx-parent</artifactId>
     <version>${revision}${changelist}</version>
   </parent>
-  <artifactId>mmm-ui-fx-chart</artifactId>
+  <artifactId>mmm-ui-fx-temporal</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <description>Implementation of chart widgets for JavaFx.</description>
-  
+  <description>Implementation of temporal widgets (for data and time) for JavaFx.</description>
+
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>mmm-ui-api-chart</artifactId>
+      <artifactId>mmm-ui-api-temporal</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
