--- a/all/pom.xml
+++ b/all/pom.xml
@@ -31,6 +31,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>mmm-ui-fx-form</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>mmm-ui-fx-format</artifactId>
     </dependency>
     <dependency>
