--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>mmm-ui-api-controller</artifactId>
+      <artifactId>mmm-ui-spi-controller</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
