m-m-m/ui-api#1: extract number module

--- a/all/pom.xml
+++ b/all/pom.xml
@@ -51,6 +51,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>mmm-ui-fx-number</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>mmm-ui-fx-tab</artifactId>
     </dependency>
     <dependency>
