--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <module>icon-fontawesome</module>
     <module>media</module>
     <module>menu</module>
+    <module>number</module>
     <module>tab</module>
     <module>temporal</module>
     <module>window</module>
@@ -106,6 +107,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-ui-fx-menu</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>mmm-ui-fx-number</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
