--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,6 @@
   <description>Implementation of mmm-ui-api for JavaFx.</description>
 
   <properties>
-    <revision>1.0.0</revision>
-    <changelist>-SNAPSHOT</changelist>
     <mmm.repository>ui-fx</mmm.repository>
     <javafx.version>15</javafx.version>
   </properties>
@@ -45,7 +43,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-ui-spi-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.1.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
