--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-validation-main</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.1.1</version>
       </dependency>
       <dependency>
         <groupId>org.openjfx</groupId>
