--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-ui-spi-parent</artifactId>
-        <version>0.1.1</version>
+        <version>0.2.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -126,11 +126,6 @@
         <groupId>${project.groupId}</groupId>
         <artifactId>mmm-ui-fx-window</artifactId>
         <version>${project.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>mmm-validation-main</artifactId>
-        <version>0.1.1</version>
       </dependency>
       <dependency>
         <groupId>org.openjfx</groupId>
