--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <module>menu</module>
     <module>number</module>
     <module>tab</module>
-    <module>temporal</module>
+    <module>time</module>
     <module>window</module>
   </modules>
 
@@ -130,7 +130,7 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
-        <artifactId>mmm-ui-fx-temporal</artifactId>
+        <artifactId>mmm-ui-fx-time</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
