--- a/time/pom.xml
+++ b/time/pom.xml
@@ -7,15 +7,15 @@
     <artifactId>mmm-ui-fx-parent</artifactId>
     <version>${revision}</version>
   </parent>
-  <artifactId>mmm-ui-fx-temporal</artifactId>
+  <artifactId>mmm-ui-fx-time</artifactId>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
-  <description>Implementation of temporal widgets (for data and time) for JavaFx.</description>
+  <description>Implementation of java.time related widgets for JavaFx.</description>
 
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>mmm-ui-api-temporal</artifactId>
+      <artifactId>mmm-ui-api-time</artifactId>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
